* fixed small layout bug

--- a/core/assets/css/content.css
+++ b/core/assets/css/content.css
@@ -177,6 +177,8 @@ div.title {
 	margin:15px 0 10px 0;
 	padding-left:10px;
 	width:97%;
+	left: -100px;
+	position: relative;
 }
 
 
